[package]
name = "splinify"
version = "0.2.1"
edition = "2021"
description = "Rust-wrapper for Dierckx' B-Splines Curve and Surface Fortran Library"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/splinify"
keywords = ["spline", "interpolation", "curve", "smoothing", "fitting"]
license = "MIT OR Apache-2.0"

[dependencies]
spliny = "0.3"
dierckx-sys = "0.1.1"
csv = "1.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
bitflags = "1.3"
plotters = { version = "0.3", optional = true }

[features]
default = []
plot = ["dep:plotters", "spliny/plot"]

[dev-dependencies]
approx = "0.5"

[[example]]
name = "pezzack"
required-features = ["plot"]

[[example]]
name = "bb-locus"
required-features = ["plot"]

[[example]]
name = "cie-daylight"
required-features = ["plot"]

[[example]]
name = "led-fit"
required-features = ["plot"]

[[example]]
name = "lissajous"
required-features = ["plot"]
